--- a/tmi.css
+++ b/tmi.css
@@ -9,28 +9,38 @@ body {
     margin: 15px;
 }
 header {
-    border-bottom: 3px solid rgb(114, 127, 115);
-    color: rgb(20, 90, 76);
-    text-align: center;
-    padding: 10px 20px 20px 20px;  
+    border-bottom: 3px solid rgb(177, 176, 160);
+    padding: 10px 20px 30px 40px;  
     margin-bottom: 10px 10px 10px 0;
 }
 .PageName {
+    color: rgb(61, 203, 247);   
+    background-color: rgb(255, 218, 224);
     font-size: 40px;
     font-weight: bold;
     text-decoration: none;
-}
-header .PageName:visited {
-  color: rgb(20, 90, 76);
+    padding: 2px 13px 4px 13px;
+    border: 3px solid rgb(255, 139, 139);
+    border-radius: 4%;
+    margin: 0 18px 0 0;
+}     
+header .PageName:visited {  
+    color: rgb(61, 203, 247);   
 }
 /* menu */
 .menu {
-    border-right: 3px solid rgb(114, 127, 115);
-    margin: 0 0 0 20px;
+    border-right: 4px dotted rgb(177, 176, 160);
+    margin: 0 20px 0 20px;
     padding: 20px 0;
 }
-.menu a{text-decoration:none;}
-.menu a:visited{color:black;}
+.menu a {
+    color:rgb(104, 43, 28);
+    border: 1px solid rgb(140, 0, 255);
+    padding: 0 2px 0 2px;
+    background-color: rgb(248, 194, 77);
+    text-decoration:none;
+}
+.menu a:visited{color:rgb(104, 43, 28);}
 /* main */
 main {
     margin-left: 30px;
@@ -95,40 +105,22 @@ td, th {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    border-bottom: 3px solid rgb(114, 127, 115); 
+    border-bottom: 3px solid rgb(177, 176, 160);
 }
-/* banner - Home */
-.item1 {
+.banner a {text-decoration:none; color:black;}
+/* banner - Home, SNS, Contacts */
+.item1,.item2,.item3 {
     text-align: center;
-    text-decoration: none;
-    border-right: 3px solid rgb(114, 127, 115);
+    border-right: 3px solid rgb(177, 176, 160);
     flex-grow: 1;
     padding-top:3px;
 }
-.item1 a{text-decoration:none; color:black;}
-/* Banner - SNS */
-.item2 {
-    text-align: center;
-    border-right: 3px solid rgb(114, 127, 115);
-    flex-grow: 1;
-    padding-top:3px;
-}
-.item2 a{text-decoration:none; color:black;}
-/* Banner - Contacts */
-.item3 {
-    text-align: center;
-    border-right: 3px solid rgb(114, 127, 115);
-    flex-grow: 1;
-    padding-top:3px;
-}
-.item3 a{text-decoration:none; color:black;}
 /* Banner - TMI */
 .item4 {
     text-align: center;
     flex-grow: 1;
     padding-top:3px;
 }
-.item4 a{text-decoration:none; color:black;}
 /* 850px 이하일 때 */
 @media(max-width: 1200px){
     #grid1 {
