--- a/css/contactme.css
+++ b/css/contactme.css
@@ -80,3 +80,23 @@ header {
       display: none;
     }
 }
+/*------------------------------------------------------------*/
+/* Contactme CSS!! */
+/* main */
+main {
+    margin-left: 30px;
+}
+.intro {
+    color:rgb(255, 60, 0);
+    background-color: rgb(127, 246, 255);
+    display: inline;
+    padding: 3px;
+    margin:5px;
+    font-size: x-large;
+}
+.contact {
+    text-decoration: none;
+    color:black;
+}
+.contact:visited {color:black;}
+.contact:hover{color:rgb(255, 0, 191);}
