--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,11 @@ header {
     color: rgb(61, 203, 247);   
 }
 .PageName:hover{color:rgb(2, 255, 167);}
+/* button (ON/OFF) */
+.ON_button{background-color: yellow;}
+.ON_button:hover{background-color: rgb(255, 183, 0);}
+.OFF_button{background-color: gray;}
+.OFF_button:hover{background-color: rgb(213, 118, 118);}
 /* menu ---------------------------------------------*/
 .menu {
     border-right: 4px dotted rgb(177, 176, 160);
@@ -52,11 +57,13 @@ main {
 .ggongzi {
     width: 100px;
 }
-.intro {
-    color:rgb(149, 0, 255);
 
-    background-color: rgb(157, 255, 0);
+.intro {
+    color:rgb(255, 60, 0);
+    background-color: rgb(127, 246, 255);
     display: inline;
+    padding: 3px;
+    margin:5px;
 }
 /* button ------------------------------------------*/
 .button1 {
